# State-Consumption

./: .gitignore  .~lock.mdu_clientes.xlsx#  MANUAL.md  Makefile  README.md  README_es.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: code_formatter.yml  pull_requests.yml
boss/: README.md  README_es.md  __init__.py  __main__.py  generate.py
boss/clients/: clients.py
boss/constant/: columns.py  equipment.py
boss/lib/: clients.py  data.py  load.py  report.py
common/: __init__.py
common/constant/: bras.py  collection.py  colname.py  columns.py  exception.py  exportname.py  file.py  filename.py  group.py  states.py
common/test/: test_date.py  test_export.py  test_file.py  test_fix.py  test_transform.py  test_validate.py
common/utils/: date.py  export.py  file.py  (+4 more)
constants/: columns.py  path.py  sheetnames.py
database/: README.md  README_es.md  __init__.py  __main__.py  test_files.py  test_finds.py  test_inserts.py  update.py  updater.py
docs/: PULL_REQUEST_TEMPLATE.md
libs/: __init__.py  cli.py  process.py  settings.py
logs/: state-consumption.log.2025-10-07
measurement/: README.md  README_es.md  __init__.py  __main__.py  generate.py
olt/: README.md  README_es.md  __init__.py  __main__.py  generate.py
reader/: asf.py  boss.py  reader.py  traffic.py
state_consumption/: __main__.py
test/: __init__.py  data_test.py  export_test.py  format_test.py  process_test.py  terminal_test.py  test_inserts.py  updater_test.py
utils/: console.py  excel.py  format.py  settings.py
(+95 files in other folders)
